--- a/mall-admin/src/main/resources/application-dev.yml
+++ b/mall-admin/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -14,9 +14,9 @@ spring:
         login-password: druid
   redis:
     host: localhost # Redis服务器地址
-    database: 0 # Redis数据库索引（默认为0）
+    database: 2 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
-    password: # Redis服务器连接密码（默认为空）
+    password: jl2012 # Redis服务器连接密码（默认为空）
     timeout: 300ms # 连接超时时间（毫秒）
 
 logging:
@@ -25,4 +25,6 @@ logging:
     com.macro.mall: debug
 
 logstash:
-  host: localhost
+  host: ${linux}
+
+linux: 192.168.85.128
