--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -17,7 +17,7 @@ spring:
         login-password: druid
   data:
     mongodb:
-      host: localhost
+      host: ${linux}
       port: 27017
       database: mall-port
   redis:
@@ -29,9 +29,9 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    virtual-host: /mall
-    username: mall
-    password: mall
+#    virtual-host: /mall
+    username: guest
+    password: guest
 
 logging:
   level:
@@ -39,5 +39,7 @@ logging:
     com.macro.mall: debug
 
 logstash:
-  host: localhost
+  host: ${linux}
+
+linux: 192.168.85.128
 
