--- a/mall-search/src/main/resources/application-dev.yml
+++ b/mall-search/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -18,7 +18,7 @@ spring:
         enabled: true
   elasticsearch:
     rest:
-      uris: localhost:9200
+      uris: ${linux}:9200
 
 logging:
   level:
@@ -26,4 +26,6 @@ logging:
     com.macro.mall: debug
 
 logstash:
-  host: localhost
+  host: ${linux}
+
+linux: 192.168.85.128
