--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -22,9 +22,9 @@ spring:
       database: mall-port
   redis:
     host: localhost # Redis服务器地址
-    database: 0 # Redis数据库索引（默认为0）
+    database: 2 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
-    password: # Redis服务器连接密码（默认为空）
+    password: jl2012 # Redis服务器连接密码（默认为空）
     timeout: 300ms # 连接超时时间（毫秒）
   rabbitmq:
     host: localhost
